INSPECTIT-311: windows x64 build integrated and available